--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="modal-header">
           <h4 class="modal-title" style="font-size: 16; color: #1d1d1d">Disclaimer:</h4>
         </div>
-        <div class="modal-body" style="    font-size: 12px; color: #6d6d6d;">
+        <div class="modal-body" style="font-size: 1rem; color: #6d6d6d;">
 
           Port of Portland geospatial data is gathered, maintained and primarily used for internal
           reference and analysis, and is only updated as resources permit.
@@ -180,7 +180,7 @@
           <input type="text" placeholder="Search" class="fltr-controls filtr-search" name="filtr-search" data-search />
           &nbsp
           <!-- catagory buttons -->
-          <ul class="simplefilter" style="font-size: .75rem">
+          <ul class="simplefilter">
             <li class="fltr-controls active" data-filter="all">All</li>
             <li class="fltr-controls" data-filter="1">Environmental</li>
             <li class="fltr-controls" data-filter="2">Floorplans</li>
@@ -206,7 +206,7 @@
               <img class="img-responsive" src="assets/img/nri.png" alt="Natural Resource Inventory" />
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data-json-test/master/monster.json"
-                  download="monster.json" target="_blank">Natural Resource Inventory</a></span>
+                  download="monster.json" target="_blank">Natural Resources</a></span>
             </div>
             <div class="filtr-item" data-category="1" data-sort="Wetlands">
               <img class="img-responsive" src="assets/img/wetlands.png" alt="Wetlands" />
@@ -218,19 +218,19 @@
               <img class="img-responsive" src="assets/img/floorplan-1.png" alt="PDX Enplane Floorplans" />
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data-json-test/master/monster.json"
-                  download="monster.json" target="_blank">PDX Enplane Floorplans</a></span>
+                  download="monster.json" target="_blank">PDX Floorplans 2nd</a></span>
             </div>
             <div class="filtr-item" data-category="2" data-sort="PDX Deplane Floorplans">
               <img class="img-responsive" src="assets/img/floorplan-2.png" alt="PDX Deplane Floorplans" />
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data-json-test/master/monster.json"
-                  download="monster.json" target="_blank">PDX Deplane Floorplans</a></span>
+                  download="monster.json" target="_blank">PDX Floorplans 1st</a></span>
             </div>
             <div class="filtr-item" data-category="2" data-sort="PDX Mezzanine Floorplans">
               <img class="img-responsive" src="assets/img/floorplan-3.png" alt="PDX Mezzanine Floorplans" />
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data-json-test/master/monster.json"
-                  download="monster.json" target="_blank">PDX Mezzanine Floorplans</a></span>
+                  download="monster.json" target="_blank">PDX Floorplans 3rd</a></span>
             </div>
             <div class="filtr-item" data-category="3" data-sort="PDX Noise Contours 1982">
               <img class="img-responsive" src="assets/img/pdx-noise-1982.png" alt="PDX Noise Contours 1982" />
@@ -317,7 +317,7 @@
 
     <p style="color: #525252" class="text-center">Find our code at
         <a href="https://github.com/portofportlandgis" target="_blank" style="color: #1d1d1d;"><i
-          class="fab fa-github"></i> GitHub</a> , or view the examples below.</p>
+          class="fab fa-github"></i> GitHub</a> , or check out the examples below.</p>
 
     <br>
   </div>
