--- a/index.html
+++ b/index.html
@@ -115,15 +115,12 @@
 
   <!-- Masthead -->
   <header class="masthead bg-primary text-center">
-
+ 
     <div class="container d-flex align-items-center flex-column">
-      <div class="divider-custom">
+      <div class="divider-custom" style="margin: 1rem">
 
-        <!-- <i class="fas fa-globe fa-7x"></i> -->
+          <img src="assets/img/logo.svg" height="80" width="80">
 
-        <div id="globe" style="position:absolute; padding-top: 1px; z-index: 1; overflow: hidden;">
-          <script src="assets/js/globe.js"></script>
-        </div>
 
       </div>
 
