--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           href="https://github.com/portofportlandgis/open-data-json-test" target="_blank" style="color: #1d1d1d;"><i
             class="fab fa-github"></i> GitHub</a>, or search for layers below:</p>
 
-            <br>
+      <br>
 
       <!-- Data Grid Items -->
 
@@ -301,20 +301,27 @@
       , or check out the examples below.</p>
 
     <br>
+
+    <div class="divider-custom">
+      <div class="divider-custom-icon">
+        <i style="font-size: x-large;" class="fas fa-chevron-down"></i>
+      </div>
+    </div>
   </div>
 
-  <div class="divider-custom">
-    <div class="divider-custom-line"></div>
-    <div class="divider-custom-icon">
-      <i style="font-size: large;" class="fas fa-globe"></i>
-    </div>
-    <div class="divider-custom-line"></div>
-  </div>
-  
+  <hr>
+  <br>
+
 
   <!-- Portmap tiles -->
   <!-- Portmap tiles -->
   <div class="container">
+
+    <div class="divider-custom">
+      <div class="divider-custom-icon">
+        <i style="font-size: large;" class="fas fa-globe"></i>
+      </div>
+    </div>
 
     <!-- About Section Heading -->
     <h2 class="page-section-heading text-center text-secondary mb-0"><a
@@ -322,10 +329,10 @@
 
     <br>
 
-    <p style="color: #525252" class="text-center">A responsive web map application template with built-in geospatial tools using Bootstrap and MapboxGL.
-        Check out the 
-      <a
-        href="https://cdettlaff.github.io./" target="_blank" style="color: #1c8de0;"> demo.</a>
+    <p style="color: #525252" class="text-center">A responsive web map application template with built-in geospatial
+      tools using Bootstrap and MapboxGL.
+      Check out the
+      <a href="https://cdettlaff.github.io./" target="_blank" style="color: #1c8de0;"> demo.</a>
     </p>
 
     <br>
@@ -380,17 +387,28 @@
     <hr>
     <br>
 
+    <div class="divider-custom">
+      <div class="divider-custom-icon">
+        <i style="font-size: large;" class="fas fa-globe"></i>
+      </div>
+    </div>
+
     <!--Portmap Analyst Tiles -->
     <!--Portmap Analyst Tiles -->
     <h2 class="page-section-heading text-center text-secondary mb-0"><a
-        href="https://github.com/portofportlandgis/portmap-analyst" target="_blank" style="color:#1c8de0"> Portmap Analyst</a>
+        href="https://github.com/portofportlandgis/portmap-analyst" target="_blank" style="color:#1c8de0"> Portmap
+        Analyst</a>
     </h2>
 
     <br>
 
-    <p style="color: #525252" class="text-center">A responsive web map application template with geospatial tools using Turf, Bootstrap and Mapbox GL.
-      It's basically a starting point to easily attach additional Turf.js spatial analysis tools. 
-      What's already included is a lat/lng finder, center of mass, buffer, great circle, polygon grid, feature measurement, and coordinate array.
+    <p style="color: #525252" class="text-center">A responsive web map application template with geospatial tools using
+      Turf, Bootstrap and Mapbox GL.
+      It's basically a starting point to easily attach additional Turf.js spatial analysis tools.
+      What's already included is a lat/lng finder, center of mass, buffer, great circle, polygon grid, feature
+      measurement, and coordinate array. Check it out at <a
+      href="https://github.com/portofportlandgis/portmap-analyst" target="_blank" style="color: #1d1d1d;"><i
+        class="fab fa-github"></i> GitHub.</a>
     </p>
 
     <br>
@@ -398,18 +416,33 @@
 
     <div class="slideshow-container">
       <div class="mySlides2">
-        <img src="assets/img/portmap.png" style="width:100%">
-        <div class="text">Capt55555t</div>
+        <img src="assets/img/edit.png" style="width:100%">
+        <div class="text">Edit, export, or drag-n-drop JSON files.</div>
       </div>
 
       <div class="mySlides2">
-        <img src="assets/img/draw.png" style="width:100%">
-        <div class="text">Captikjbjkg888888on Text</div>
+        <img src="assets/img/buffer.png" style="width:100%">
+        <div class="text">Buffer selected features.</div>
       </div>
 
       <div class="mySlides2">
-        <img src="assets/img/search.png" style="width:100%">
-        <div class="text">Captikjbjk77777gon Text</div>
+        <img src="assets/img/grid.png" style="width:100%">
+        <div class="text">Create custom grids.</div>
+      </div>
+
+      <div class="mySlides2">
+        <img src="assets/img/measure.png" style="width:100%">
+        <div class="text">Live measurements as you draw features. </div>
+      </div>
+
+      <div class="mySlides2">
+        <img src="assets/img/great-circle.png" style="width:100%">
+        <div class="text">Create and calcualte distances of great circles.</div>
+      </div>
+
+      <div class="mySlides2">
+        <img src="assets/img/center-of-mass.png" style="width:100%">
+        <div class="text">Identify the center of mass of a feature.</div>
       </div>
 
       <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
@@ -420,10 +453,17 @@
     <hr>
     <br>
 
+    <div class="divider-custom">
+      <div class="divider-custom-icon">
+        <i style="font-size: large;" class="fas fa-globe"></i>
+      </div>
+    </div>
+
     <!-- getElevation API Tiles -->
     <!-- getElevation API Tiles -->
     <h2 class="page-section-heading text-center text-secondary mb-0"><a
-        href="https://github.com/portofportlandgis/getElevationAPI" target="_blank" style="color:#1c8de0"> getElevation API</a>
+        href="https://github.com/portofportlandgis/getElevationAPI" target="_blank" style="color:#1c8de0"> getElevation
+        API</a>
     </h2>
 
     <br>
@@ -435,6 +475,17 @@
           class="fab fa-github"></i> GitHub.</a>
     </p>
 
+    <br>
+    <br>
+
+    <div class="container d-flex align-items-center flex-column">
+
+      <img src="assets/img/mountains-crab.svg" width="500">
+
+    </div>
+
+    <br>
+    <hr>
     <br>
 
 </section>
