--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
     <br>
 
     <p style="color: #525252" class="text-center">A responsive web map application template with built-in geospatial
-      tools using Bootstrap and MapboxGL.
+      tools using Bootstrap and Mapbox GL.
       Check out the
       <a href="https://cdettlaff.github.io./" target="_blank" style="color: #1c8de0;"> demo.</a>
     </p>
@@ -544,7 +544,7 @@
 
     <div class="container d-flex align-items-center flex-column">
 
-      <img src="assets/img/mountains-crab.svg" width="500">
+      <img src="assets/img/mountains.svg" width="500">
 
     </div>
 
