--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <!-- Navigation Bar -->
   <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand">Port of Portland</a>
+      <a class="navbar-brand">Open Source</a>
 
       <div class="navbar-nav">
 
@@ -110,7 +110,7 @@
     <div class="container d-flex align-items-center flex-column">
       <div class="divider-custom" style="margin: 1rem">
 
-        <img src="assets/img/port-logo.svg" height="80" width="80">
+        <img src="assets/img/port-logo.svg" width="390">
 
 
       </div>
@@ -512,9 +512,9 @@
 <!-- API Section -->
 <!-- API Section -->
 <!-- API Section -->
-<section class="page-section portfolio" id="portfolio">
+<section class="page-section portfolio" id="api">
 
-  <div class="container" id="api">
+  <div class="container">
 
     <hr>
 
@@ -596,7 +596,7 @@
   <div class="container">
     <small>Copyright &copy; Port of Portland </small>
 
-    <small> | terms of use</small>
+    <!-- <small> | terms of use</small> -->
   </div>
 </section>
 
