add stormwater data

--- a/index.html
+++ b/index.html
@@ -324,6 +324,38 @@
                   download="data.json" target="_blank">Storm Water Pipes</a></span>
             </div>
 
+            <div class="filtr-item" data-category="1, 4" data-sort="Storm Catch Basins">
+              <div class="eyeball"><a
+                  href="https://github.com/portofportlandgis/open-data/blob/master/pop-stormwater-catch-basins.json"
+                  target="_blank"><i class="fas fa-eye"></i></a>
+              </div>
+              <img class="img-responsive" src="assets/img/catch-basins.png" alt="Storm Manholes" />
+              <span class="item-desc"><a
+                  href="https://raw.githubusercontent.com/portofportlandgis/open-data/master/pop-stormwater-catch-basins.json"
+                  download="data.json" target="_blank">Storm Catch Basins</a></span>
+            </div>
+
+            <div class="filtr-item" data-category="1, 4" data-sort="Storm Outfalls">
+              <div class="eyeball"><a
+                  href="https://github.com/portofportlandgis/open-data/blob/master/pop-stormwater-outfalls.json"
+                  target="_blank"><i class="fas fa-eye"></i></a>
+              </div>
+              <img class="img-responsive" src="assets/img/outfalls.png" alt="Storm Water Pipes" />
+              <span class="item-desc"><a
+                  href="https://raw.githubusercontent.com/portofportlandgis/open-data/master/pop-stormwater-outfalls.json"
+                  download="data.json" target="_blank">Storm Outfalls</a></span>
+            </div>
+
+            <div class="filtr-item" data-category="1, 4" data-sort="Storm Manholes">
+              <div class="eyeball"><a
+                  href="https://github.com/portofportlandgis/open-data/blob/master/pop-stormwater-manholes.json"
+                  target="_blank"><i class="fas fa-eye"></i></a>
+              </div>
+              <img class="img-responsive" src="assets/img/manholes.png" alt="Storm Water Pipes" />
+              <span class="item-desc"><a
+                  href="https://raw.githubusercontent.com/portofportlandgis/open-data/master/pop-stormwater-manholes.json"
+                  download="data.json" target="_blank">Storm Manholes</a></span>
+            </div>
 
 
             <div class="filtr-item" data-category="5" data-sort="Port Boundaries">
