--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
             <div class="filtr-item" data-category="1, 4" data-sort="Storm Water Features">
               <img class="img-responsive" src="assets/img/storm-pipes.png" alt="Storm Water Features" />
               <span class="item-desc"><a
-                  href="https://github.com/portofportlandgis/open-data/blob/master/README.md#port-stormwater-data"
+                  href="https://github.com/portofportlandgis/open-data#port-stormwater-data"
                    target="_blank">Storm Water Features</a></span>
             </div>
 
